--- a/index.html
+++ b/index.html
@@ -12,21 +12,37 @@
 <div class="header">
     <h1>Header Logo</h1>
     <div class="nav-bar">
-        <ul>
             <div class="nav-bar-1">Home</div>
             <div class="nav-bar-2">Team</div>
             <div class="nav-bar-3">About Us</div>
-        </ul>
     </div>
 </div>
 
 <div class="subheader">
     <div class="desc">
         <div class="desc-1">This website is awesome</div>
-        <div class="desc-2">This contains some information about the awesome website</div>
+        <div class="desc-2">This contains some information about the awesome website. This font should be smaller and harder to read, but will still take up space on the page</div>
         <button>Sign Up</button>
     </div>
     <img src="images/coffee-main.jpg" alt="Picture of espresso" height="200vh" width="auto">
+</div>
+
+<div class="content">
+    <div class="content-header">This is a random section</div>
+    <div class="cards">
+        <div class="card-1">
+            <img src="images/coffee-sub1.jpg" alt="Picture of coffee" height="100vh" width="auto">
+            <p>This is a picture of coffee</p>
+        </div>
+        <div class="card-2">
+            <img src="images/coffee-sub2.jpg" alt="Another picture of coffee" height="100vh" width="auto">
+            <p>This is another pic of coffee</p>
+        </div>
+        <div class="card-3">
+            <img src="images/coffee-sub3.jpg" alt="Third picture of coffee" height="100vh" width="auto">
+            <p>Is this too much coffee? No</p>
+        </div>
+    </div>
 </div>
 
 </body>
