--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="header">
-    <h1>Header Logo</h1>
+    <div class="logo">Header Logo</div>
     <div class="nav-bar">
             <div class="nav-bar-1">Home</div>
             <div class="nav-bar-2">Team</div>
@@ -31,15 +31,15 @@
     <div class="content-header">This is a random section</div>
     <div class="cards">
         <div class="card-1">
-            <img src="images/coffee-sub1.jpg" alt="Picture of coffee" height="100vh" width="auto">
+            <img src="images/coffee-sub1.jpg" alt="Picture of coffee" height="150px" width="150px">
             <p>This is a picture of coffee</p>
         </div>
         <div class="card-2">
-            <img src="images/coffee-sub2.jpg" alt="Another picture of coffee" height="100vh" width="auto">
+            <img src="images/coffee-sub2.jpg" alt="Another picture of coffee" height="150px" width="150px">
             <p>This is another pic of coffee</p>
         </div>
         <div class="card-3">
-            <img src="images/coffee-sub3.jpg" alt="Third picture of coffee" height="100vh" width="auto">
+            <img src="images/coffee-sub3.jpg" alt="Third picture of coffee" height="150px" width="150px">
             <p>Is this too much coffee? No</p>
         </div>
     </div>
