--- a/index.html
+++ b/index.html
@@ -45,5 +45,10 @@
     </div>
 </div>
 
+<div class="quote">
+    <div class="quote-body">"We want to do a lot of stuff; we're not in great shape. We didn't get a good night's sleep. We're a little depressed. Coffee solves all these problems in one delightful little cup."</div>
+    <div class="quote-author">-Jerry Seinfeld</div>
+</div>
+
 </body>
 </html>
