add call to action and style

--- a/index.html
+++ b/index.html
@@ -50,5 +50,13 @@
     <div class="quote-author">-Jerry Seinfeld</div>
 </div>
 
+<div class="cta">
+    <div class="cta-left">
+        <div class="cta-head">Buy some coffee now!</div>
+        <div class="cta-body">If you sign up today we can make sure that you have as much coffee as you need for life!</div>
+    </div>
+    <button>Sign up</button>
+</div>
+
 </body>
 </html>
