add intra page links to nav

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="header">
     <div class="logo">Header Logo</div>
     <div class="nav-bar">
-            <div class="nav-bar-1">Home</div>
-            <div class="nav-bar-2">Team</div>
+            <div class="nav-bar-1"><a href="#content">Our Coffees</a></div>
+            <div class="nav-bar-2"><a href="#quote">Testimonials</a></div>
             <div class="nav-bar-3">About Us</div>
     </div>
 </div>
@@ -27,9 +27,9 @@
     <img src="images/coffee-main.jpg" alt="Picture of espresso" height="200vh" width="auto">
 </div>
 
-<div class="content">
+<div id="content">
     <div class="content-header">This is a random section</div>
-    <div class="cards">
+    <div id="cards">
         <div class="card-1">
             <img src="images/coffee-sub1.jpg" alt="Picture of coffee" height="150px" width="150px">
             <p>This is a picture of coffee</p>
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<div class="quote">
+<div id="quote">
     <div class="quote-body">"We want to do a lot of stuff; we're not in great shape. We didn't get a good night's sleep. We're a little depressed. Coffee solves all these problems in one delightful little cup."</div>
     <div class="quote-author">-Jerry Seinfeld</div>
 </div>
